--- a/home.css
+++ b/home.css
@@ -23,6 +23,8 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 10px;
+    padding-left: 5%;
+    padding-right: 5%;
 }
 
 .nav-brand img {
@@ -184,4 +186,30 @@ body {
 @keyframes fade {
   from {opacity: .5}
   to {opacity: 2}
+}
+
+/* Content */
+.content {
+    margin-top: 5%;
+    padding-left: 5%;
+    padding-right: 5%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: left;
+}
+
+.title-logo {
+    height : 2.5em;
+    width: auto;
+}
+
+.content-text p {
+    margin-top: 1%;
+    font-size: 1.25em;
+    color: #4D2D18;
+    font-weight: 500;
+}
+.maps {
+    margin-top: 5%;
 }
