--- a/home.css
+++ b/home.css
@@ -213,3 +213,30 @@ body {
 .maps {
     margin-top: 5%;
 }
+
+.foot-containers {
+    background-color: #8A6240;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    padding-left: 5%;
+    padding-right: 5%;
+    height: 20vh;
+    color: #ececec;
+}
+
+.socmed-logo {
+    margin : 0.5%;
+    height: 2rem;
+    width: auto;
+    border-radius: 20px;
+}
+
+.socmed-logo:hover {
+    transform: scale(1.1);
+    border-width: 3rem;
+    background-color: rgba(255, 255, 255, 0.50);
+    transition: 0.25s ease;
+}
