--- a/home.css
+++ b/home.css
@@ -15,6 +15,7 @@
 
 body {
     font-family: 'Quattrocento Sans';
+    background-color: #CABA9C;
 }
 
 .nav-container {
@@ -107,6 +108,12 @@ body {
   display: none;
 }
 
+.Containers img {
+  width: 90%;
+  height: auto;
+  overflow: hidden;
+}
+
 /* forward & Back buttons */
 .Back, .forward {
   cursor: pointer;
@@ -159,7 +166,7 @@ body {
   cursor: pointer;
   height: 16px;
   width: 16px;
-  margin: 0 3px;
+  margin: 0 0px;
   background-color: #acc;
   border-radius: 50%;
   display: inline-block;
@@ -197,12 +204,14 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: left;
+    margin-bottom: 5%;
 }
 
 .title-logo {
     height : 2.5em;
     width: auto;
 }
+
 
 .content-text p {
     margin-top: 1%;
@@ -214,6 +223,8 @@ body {
     margin-top: 5%;
 }
 
+
+/* Footer */
 .foot-containers {
     background-color: #8A6240;
     display: flex;
