--- a/doc.css
+++ b/doc.css
@@ -1,3 +1,4 @@
+
 .content-vidio{
     width: 100%;
     height: auto;
@@ -5,10 +6,13 @@
     margin: 0 auto;
     display: block;
     overflow: hidden;
+    padding-top: 7rem;
 }
 .content-vidio video{
     width:100%;
     height: auto;
+    border: 1px;
+    border-radius: 20px;
 }
 
 .slideshow-container.fade{
@@ -16,3 +20,12 @@
     border: 1px;
     border-radius: 50rem;
 }
+
+.Containers img {
+    width: 90%;
+    height: auto;
+    overflow: hidden;
+    border: 1px;
+    border-radius: 20px;
+ }
+
