--- a/mp.css
+++ b/mp.css
@@ -47,133 +47,6 @@
     margin-left: 5%;
 }
 
-.step-3{
-    height: 40vh;
-    width: auto;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
-.step-3 img{
-    height: 40vh;
-    width: fit-content;
-    border-style: solid;
-    border-width: 5px;
-    border-color: #4D2D18;
-    border-radius: 30px;
-    margin-right: 5%;
-}
-
-.step-4{
-    height: 40vh;
-    width: auto;
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: space-between;
-    margin-top: 5%;
-    margin-bottom: 5%;
-}
-
-.step-4 img{
-    height: 40vh;
-    width: fit-content;
-    border-style: solid;
-    border-width: 5px;
-    border-color: #4D2D18;
-    border-radius: 30px;
-    margin-left: 5%;
-}
-.step-5{
-    height: 40vh;
-    width: auto;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
-.step-5 img{
-    height: 40vh;
-    width: fit-content;
-    border-style: solid;
-    border-width: 5px;
-    border-color: #4D2D18;
-    border-radius: 30px;
-    margin-right: 5%;
-}
-.step-6{
-    height: 40vh;
-    width: auto;
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: space-between;
-    margin-top: 5%;
-    margin-bottom: 5%;
-}
-
-.step-6 img{
-    height: 40vh;
-    width: fit-content;
-    border-style: solid;
-    border-width: 5px;
-    border-color: #4D2D18;
-    border-radius: 30px;
-    margin-left: 5%;
-}
-.step-7{
-    height: 40vh;
-    width: auto;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
-.step-7 img{
-    height: 40vh;
-    width: fit-content;
-    border-style: solid;
-    border-width: 5px;
-    border-color: #4D2D18;
-    border-radius: 30px;
-    margin-right: 5%;
-}
-.step-8{
-    height: 40vh;
-    width: auto;
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: space-between;
-    margin-top: 5%;
-    margin-bottom: 5%;
-}
-
-.step-8 img{
-    height: 40vh;
-    width: fit-content;
-    border-style: solid;
-    border-width: 5px;
-    border-color: #4D2D18;
-    border-radius: 30px;
-    margin-left: 5%;
-}
-.step-9{
-    height: 40vh;
-    width: auto;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
-.step-9 img{
-    height: 40vh;
-    width: fit-content;
-    border-style: solid;
-    border-width: 5px;
-    border-color: #4D2D18;
-    border-radius: 30px;
-    margin-right: 5%;
-}
-
 .step-text{
     background-color: #8A6240;
     border-style: solid;
@@ -194,3 +67,56 @@
     color: white;
     font-size: 1.75em;
 }
+
+  /* Tablet */
+@media (max-width: 768px) {
+    .step-1{
+        height: auto;
+        width: auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    .step-1 img{
+        height: fit-content;
+        width: 100%;
+        border-style: solid;
+        border-width: 5px;
+        border-color: #4D2D18;
+        border-radius: 30px;
+        margin-bottom: 2.5vh;
+    }
+
+    .step-2{
+        height: auto;
+        width: auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        margin-top: 5%;
+        margin-bottom: 5%;
+    }
+
+    .step-2 img{
+        height: fit-content;
+        width: 100%;
+        border-style: solid;
+        border-width: 5px;
+        border-color: #4D2D18;
+        border-radius: 30px;
+        margin-left: 0;
+        margin-right: 5%;
+        margin-bottom: 2.5vh;
+    }
+
+    .step-text{
+        background-color: #8A6240;
+        border-style: solid;
+        border-width: 5px;
+        border-color: #4D2D18;
+        border-radius: 30px;
+        padding: 5%;
+        width: 100%;
+    }
+  }
